[package]
name = "rust-sdt"
version = "0.1.0"
authors = ["Julien Monchany <j.monchany@adsoftware.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3.13"
serde = "1.0.104"
serde_json = "1.0.47"
serde_derive = "1.0.104"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
env_logger = "0.8.3"
chrono =  { version = "0.4.10", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
